docs/version-1.26/modules/en/pages/personas.adoc
include::partial$variables.adoc[]
= Who is this project for? The personas.
:sidebar_label: For who?
:sidebar_position: 73
:description: Who is this project for? The personas.
:keywords: [Kubewarden, documentation, personas]
:doc-persona: [kubewarden-all]
:doc-type: [explanation]
:doc-topic: [explanation]

## {project-name} personas

[cols="1,2", options="header"]
|===
|Persona |Description

|**Policy user**
|Someone who takes a policy and uses it in a cluster. They deploy policies and observe results. They configure the policy settings but do not write the policy internal code (if there is any).

|**Operator**
|Someone operating {short-project-name} in a cluster. Installs and maintains {short-project-name}.

|**Policy distributor**
|Someone who has written a policy and wants to share it with others. They want the policy consumed by the “policy user” role. A distributor of {short-project-name} policies, to places such as ArtifactHub or private OCI repositories.

|**Policy developer**
|A person designing and writing policies for {short-project-name} for others to consume.

|**Integrator**
|Builds with, using, or on top of {short-project-name}. Perhaps a custom UI or a helper tool for generating policies.

|**Developer**
|A person working on the {short-project-name} product set. Building {short-project-name} itself.
|===
